--- a/desparche/src/App.css
+++ b/desparche/src/App.css
@@ -56,6 +56,10 @@ p {
 
 .feature {
   width : 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .featureImage { 
@@ -66,4 +70,5 @@ p {
 .featureDescription { 
   font-size: 100%;
   color: #596E7B;
+  width: 80%;
 }
