--- a/desparche/src/App.css
+++ b/desparche/src/App.css
@@ -2,8 +2,9 @@ html,
 body {
   height: 100%;
 }
+
 h1 {
-  font-size: 500%;
+  font-size: 300%;
   color: #F4F4F9;
   font-family: 'Montserrat', sans-serif;
 }
@@ -24,51 +25,47 @@ p {
 }
 
 .MainBanner {
+  /* width: 100%; */
   height: 100%;
-  display: flex;
-  align-items: center;
-  /* background-color: #313D6B; */
   background-image: url("./imgs/bar.jpeg");
-  background-size: cover;
+  background-repeat: repeat;
+  /* background-size: cover;*/
+
 }
 
-.MainBannerItem, .feature {
+/* .MainBannerItem {
+  display: flex;
+  align-content: center;
+  justify-content: center; */
+/* } */
+
+.feature {
   flex-grow: 1;
 }
 
 .phonePic {
-  width: 40%;
+  width: 70%;
 }
 
-.titles { 
+.ImageContainer {
   display: flex;
-  flex-direction: column;
-  align-content: flex-start;
-}
-
-.Features {
-  height: 50%;
-  background-color: #F4F4F9;
-  display: flex;  
-  color: #000000;
-  align-items: center;  
-}
-
-.feature {
-  width : 20%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  align-content: center;
   justify-content: center;
 }
 
-.featureImage { 
-  width : 25%;
+.titles {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  justify-content: center;
+  /* height:100%; */
 }
 
+.MainBannerContainer {
+  height: 100%;
+}
 
-.featureDescription { 
-  font-size: 100%;
-  color: #596E7B;
-  width: 80%;
+.imagePapa {
+  position: relative;
+  margin: auto 0;
 }
